Fix rendering of main menu on small screens

--- a/assets/sass/components/_chat-header.scss
+++ b/assets/sass/components/_chat-header.scss
@@ -8,6 +8,7 @@
   box-shadow: 0 4px 5px -3px rgba(0, 0, 0, 0.1);
   display: flex;
   align-items: baseline;
+  justify-content: space-between;
   top: 0;
   z-index: 900;
 
@@ -66,6 +67,14 @@
     }
   }
 
+  a,
+  .btn {
+    > .fas {
+      position: relative;
+      top: -0.1em;
+    }
+  }
+
   @include if_screen("<=two-columns") {
     a,
     .btn {
@@ -116,10 +125,6 @@
     display: block;
   }
 
-  i {
-    transition: transform 0.3s;
-  }
-
   .chat-header__unread {
     background: var(--sidebar-left-bg);
     font-size: 0.9rem;
@@ -132,7 +137,7 @@
     display: block;
     position: absolute;
     bottom: 0.65rem;
-    right: 1rem;
+    right: 0.65rem;
   }
 }
 
